--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
     sdk: flutter
   material_floating_search_bar: ^0.2.6
   geolocator: ^5.3.1
+  hive:
+  hive_flutter:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
