--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ environment:
 
 dependencies:
   http: ^0.13.3
+  signalr_flutter: ^0.1.2
+  signalr_netcore: ^1.2.3+1
   flutter:
     sdk: flutter
   material_floating_search_bar: ^0.2.6
